--- a/application/index/view/admin/page.html
+++ b/application/index/view/admin/page.html
@@ -2,7 +2,7 @@
 {block name="body"}
     <div class="row">
         <div class="col-md-12">
-            <h3>当前学期:</h3>
+            <!-- <h3>当前学期:</h3>
             <div class="dropdown">
                 <h4>选择周次:</h4>
                 <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
@@ -16,11 +16,11 @@
                     <li role="separator" class="divider"></li>
                     <li><a href="#">......</a></li>
                 </ul>
-            </div> -->
+            </div> 
             <br>
             <br>
             
-            <hr />
+            <hr /> -->
         </div>
     </div>
 {/block}
