--- a/application/index/view/student/score.html
+++ b/application/index/view/student/score.html
@@ -16,7 +16,7 @@
                     <td>
                         <div class="dropdown">
                             <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                                {$isTerm->getData('name')}
+                                {$Termname}
                                 <span class="caret"></span>
                             </button>
                             <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
