--- a/application/index/view/student/info.html
+++ b/application/index/view/student/info.html
@@ -29,7 +29,7 @@
                     <td>{$student->klass->name}</td>
                 </tr>
             </table>
-            <a href="{:url('infoedit?id=' . $student->getData('id'))}" type="button" class="btn btn-default navbar-btn">编辑</a>
+            <a href="{:url('infoedit?id=' . $student->getData('id'))}" type="button" class="btn btn-default navbar-btn">修改密码</a>
             <hr /> 
         </div>
     </div>
