--- a/application/index/view/student/infoedit.html
+++ b/application/index/view/student/infoedit.html
@@ -19,7 +19,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"></script>
     <div class="container-fluid">
         <div class="page-header">
-            <h1 class="text-center">微课堂 <small>梦云智出品</small></h1>
+            <h1 class="text-center">修改密码 <small>微课堂</small></h1>
         </div>
         <form action="{:url('infoupdate')}" method="post">
             <div class="input-group input-group-lg ">
@@ -37,8 +37,8 @@
         <br>
             <div class="form-group text-center">
                     <br>
-                    <button type="submit" class="btn btn-default btn-lg">保存</button>
-                
+                    <button type="submit" class="btn btn-primary btn-lg">保存</button>&nbsp&nbsp&nbsp
+                    <a href="{:url('info')}" type="button"  class="btn btn-success btn-lg">返回</a>
             </div>
         </form>
     </div>
