--- a/application/index/view/student/coursetime.html
+++ b/application/index/view/student/coursetime.html
@@ -1,64 +1,10 @@
-<!DOCTYPE html>
-<html lang="zh-cn">
-<!--刘宇轩-->
-<!--2019.07.19 14:55-->
+{extend name="student"/}
+{block name="body"}
 
-<head>
-    <meta charset="UTF-8">
-    <title>{block name="title"}微课堂-梦云智出品{/block}</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <!--调用bootstrap的CSS样式 -->
-</head>
-
-<body class="container">
-    <!-- jQuery (Bootstrap 的所有 JavaScript 插件都依赖 jQuery，所以必须放在前边) -->
-    <script src="https://cdn.jsdelivr.net/npm/jquery@1.12.4/dist/jquery.min.js"></script>
-    <!-- 加载 Bootstrap 的所有 JavaScript 插件。你也可以根据需要只加载单个插件。 -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"></script>
-    <nav class="navbar navbar-default navbar-fixed-top">
-        <div class="container-fluid">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="#">微课堂</a>
-            </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                    <li><a href="page">学生主页</a></li>
-                    <li><a href="online">上课模式</a></li>
-                    <li class="active"><a href="course"> 课程查询<span class="sr-only">(current)</span></a></li>
-                    <!--是这个标签是当前标签 -->
-                    <li><a href="score">成绩查询</a></li>
-                    <li><a href="info">个人信息</a></li>
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#">Link</a></li>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">您好，亲爱的同学 <span class="caret"></span></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="password">设置</a></li>
-                            <li role="separator" class="divider"></li>
-                            <li><a href="../login/login">注销</a></li>
-                        </ul>
-                    </li>
-                </ul>
-            </div><!-- /.navbar-collapse -->
-        </div><!-- /.container-fluid -->
-    </nav>
-    <br><br>
     <div class="row">
         <div class="col-md-12">
-            {block name="search"}
-            <hr />
-            <div class="alert alert-success" role="alert">激活学期已结束或未开始</div>
-            <h3>课程名:</h3>
+
+
             <table class="table table-bordered">
                 <tr class="info">
                     <th>节次</th>
@@ -123,9 +69,7 @@
             </table>
             <br><br>
             <a href="course" type="button" class="btn btn-default navbar-btn">返回</a>
-            <hr /> {/block} {block name="content"} {/block} {block name="page"} {/block}
+            <hr />
         </div>
     </div>
-</body>
-
-</html>
+{/block}
