--- a/application/index/view/student/page.html
+++ b/application/index/view/student/page.html
@@ -1,16 +1,42 @@
 {extend name="student"/}
+{block name="class"}
+<link rel="stylesheet" href="/static/layer.css">
+<link rel="stylesheet" href="/static/loginlayer.css">
+<link rel="stylesheet" href="/static/frozen.css">
+<style>
+*{outline: none}
+#header{position:relative;background-color:#B2EB7A;border-bottom:1px solid #e0e0e0;}
+#topbar_title{color:#fff;line-height:50px;text-align:center;font-size:16px;height:50px;margin:0 5px;}
+.ui-select:after {display: none;}
+.ui-form-item{padding-top:3px;margin-left:5px;}
+.ui-form-item > .ui-select{margin:0;}
+.ui-select select{padding-right:0;width:inherit;color:white;font-size:16px;}
+.zc{background-color:#B2EB7A;border:none;}
+.refresh{position:absolute;right:0;bottom:0;height:25px;padding:12px 10px 12px 20px;}
+.pull-down{margin-left:-20px;}
+body{margin: 0;padding: 0}
+table{border-collapse: collapse;border-spacing: 0;}
+.course{width: 100%;table-layout: fixed;}
+.day{border-bottom: 1px solid #B2EB7A;color: #777}
+td{text-align: center;}
+.section td:first-child{text-align: center;border-right: 1px solid #B2EB7A;border-bottom: 1px solid #B2EB7A;color: #777;font-size: 12px;}
+.section td > div{border-radius: 7px;color: #fff;height: 98%;width: 95%;display: none;overflow:hidden;font-size: 12px;margin-left: 2px}
+.section td > div > div{vertical-align:middle;display:table-cell;}
+.course td{height: 62px;}
+.day td{border-right: 1px solid #B2EB7A;height: 34px;font-size: 12px}
+</style>
+{/block}
+
 {block name="body"}
     <div class="row">
         <div class="col-md-12">
             
             <div class="jumbotron">
                 <h1>微课堂-梦云智出品</h1>
-                <p>...</p>
                 <p><a href="aboutourteam" class="btn btn-primary btn-lg" role="button">团队概况</a></p>
             </div>
 
-            <h3>学期名:</h3>
-            <table>
+<!--             <table>
                 <tr>
                     <th>
                         <h4>选择周次:&nbsp&nbsp</h4>
@@ -183,4 +209,113 @@
             <hr /> 
         </div>
     </div>
+ -->
+
+    <div id="main">
+        <header id="header">
+            <h1 id="topbar_title">
+                <div class="ui-form-item">
+                    <div class="ui-select">
+                        <select id="zc" class="zc" onchange="getCourse()">
+                            <option value="1">第一周</option>
+                            <option value="2">第二周</option>
+                            <option value="3">第三周</option>
+                            <option value="4">第四周</option>
+                            <option value="5">第五周</option>
+                            <option value="6">第六周</option>
+                            <option value="7">第七周</option>
+                            <option value="8">第八周</option>
+                            <option value="9">第九周</option>
+                            <option value="10">第十周</option>
+                            <option value="11">第十一周</option>
+                            <option value="12">第十二周</option>
+                            <option value="13">第十三周</option>
+                            <option value="14">第十四周</option>
+                            <option value="15">第十五周</option>
+                            <option value="16">第十六周</option>
+                            <option value="17">第十七周</option>
+                            <option value="18">第十八周</option>
+                            <option value="19">第十九周</option>
+                            <option value="20">第二十周</option>
+                            <option value="21">第二十一周</option>
+                            <option value="22">第二十二周</option>
+                            <option value="23">第二十三周</option>
+                            <option value="24">第二十四周</option>
+                        </select>
+                        <span id="pull-down" class="pull-down" style="margin-left: -20px;">▾</span>
+                    </div>
+                </div>
+            </h1>
+        </header>
+        <table class="course">
+            <tbody><tr class="day">
+                <td id="month">9月</td>
+                <td><span id="1-day">23</span><br>周一</td>
+                <td><span id="2-day">24</span><br>周二</td>
+                <td><span id="3-day">25</span><br>周三</td>
+                <td><span id="4-day">26</span><br>周四</td>
+                <td><span id="5-day">27</span><br>周五</td>
+                <td><span id="6-day">28</span><br>周六</td>
+                <td><span id="7-day">29</span><br>周日</td>
+            </tr>
+
+        <?php for ($i = 1;$i<=11;$i++){ ?>
+                
+
+            <tr class="section section-{$i}">
+                <td>
+                &nbsp;{$i}&nbsp;<br>
+                {$timetable[$i]}
+                q
+                </td>
+                {eq name='$coursetable[$i][1]' value='0'}
+                <td id="section-1-1" rowspan="1" style="display: table-cell;"><div style="display: table; background-color: rgb(255, 255, 255);"><div></div></div></td>
+                {else /}
+                <td id="section-1-{$i}" rowspan="{$coursetable[$i][1]->length}" style="display: table-cell;"><div style="display: {eq name='$coursetable[$i][1]' value='0'} none {else /} table {/eq}; background-color: rgb(82, 212, 171);"><div>{$coursetable[$i][1]->course->name} {$coursetable[$i][1]->classroom->classroomname}</div></div></td>
+                {/eq}
+                
+                {eq name='$coursetable[$i][2]' value='0'}
+                <td id="section-1-1" rowspan="1" style="display: table-cell;"><div style="display: table; background-color: rgb(255, 255, 255);"><div></div></div></td>
+                {else /}
+                <td id="section-2-{$i}" rowspan="{$coursetable[$i][2]->length}" style="display: table-cell;"><div style="display: {eq name='$coursetable[$i][2]' value='0'} none {else /} table {/eq}; background-color: rgb(82, 212, 171);"><div>{$coursetable[$i][2]->course->name} {$coursetable[$i][2]->classroom->classroomname}</div></div></td>
+                {/eq}
+
+                {eq name='$coursetable[$i][3]' value='0'}
+                <td id="section-1-1" rowspan="1" style="display: table-cell;"><div style="display: table; background-color: rgb(255, 255, 255);"><div></div></div></td>
+                {else /}
+                <td id="section-3-{$i}" rowspan="{$coursetable[$i][3]->length}" style="display: table-cell;"><div style="display: {eq name='$coursetable[$i][3]' value='0'} none {else /} table {/eq}; background-color: rgb(82, 212, 171);"><div id="2">{$coursetable[$i][3]->course->name} {$coursetable[$i][3]->classroom->classroomname}</div></div></td>
+                {/eq}
+
+                {eq name='$coursetable[$i][4]' value='0'}
+                <td id="section-1-1" rowspan="1" style="display: table-cell;"><div style="display: table; background-color: rgb(255, 255, 255);"><div></div></div></td>
+                {else /}
+                <td id="section-4-{$i}" rowspan="{$coursetable[$i][4]->length}" style="display: table-cell;"><div style="display: {eq name='$coursetable[$i][4]' value='0'} none {else /} table {/eq}; background-color: rgb(181, 147, 231);"><div id="4">{$coursetable[$i][4]->course->name} {$coursetable[$i][4]->classroom->classroomname}</div></div></td>
+                {/eq}
+
+                {eq name='$coursetable[$i][5]' value='0'}
+                <td id="section-1-1" rowspan="1" style="display: table-cell;"><div style="display: table; background-color: rgb(255, 255, 255);"><div></div></div></td>
+                {else /}
+                <td id="section-5-{$i}" rowspan="{$coursetable[$i][5]->length}" style="display: table-cell;"><div style="display: {eq name='$coursetable[$i][5]' value='0'} none {else /} table {/eq}; background-color: rgb(181, 147, 231);"><div id="5">{$coursetable[$i][5]->course->name} {$coursetable[$i][5]->classroom->classroomname}</div></div></td>
+                {/eq}
+
+                {eq name='$coursetable[$i][6]' value='0'}
+                <td id="section-1-1" rowspan="1" style="display: table-cell;"><div style="display: table; background-color: rgb(255, 255, 255);"><div></div></div></td>
+                {else /}
+                <td id="section-6-{$i}" rowspan="{$coursetable[$i][6]->length}" style="display: table-cell;"><div style="display: {eq name='$coursetable[$i][6]' value='0'} none {else /} table {/eq}; background-color: rgb(204, 204, 204);"><div id="11">{$coursetable[$i][6]->course->name} {$coursetable[$i][6]->classroom->classroomname}</div></div></td>
+                {/eq}
+
+                {eq name='$coursetable[$i][7]' value='0'}
+                <td id="section-1-1" rowspan="1" style="display: table-cell;"><div style="display: table; background-color: rgb(255, 255, 255);"><div></div></div></td>
+                {else /}
+                <td id="section-7-{$i}" rowspan="{$coursetable[$i][7]->length}" style="display: table-cell;"><div style="display: {eq name='$coursetable[$i][7]' value='0'} none {else /} table {/eq}; background-color: rgb(82, 212, 171);"><div>{$coursetable[$i][7]->course->name} {$coursetable[$i][7]->classroom->classroomname}</div></div></td>
+                {/eq}
+            </tr>
+
+
+        <?php } ?>
+
+
+        </tbody></table>
+    </div>
+
 {/block}
