--- a/application/index/view/teacher/grade.html
+++ b/application/index/view/teacher/grade.html
@@ -12,7 +12,7 @@
                   <th>详细信息</th>
                   <th>录入成绩</th>
                 </tr>
-                {volist name="courses" id="course" $key="key"}
+                {volist name="courses" id="course" key="key"}
                   <tr>
                     <td>{$key}</td>
                     <td>{$course->getdata('name')}</td>
