--- a/application/index/view/admin/teacher.html
+++ b/application/index/view/admin/teacher.html
@@ -21,7 +21,7 @@
                     </form>
                 </div>
                 <div class="col-md-4 text-right">
-                    <a class="btn btn-primary" href="http://127.0.0.1/microcourse/public/index/Admin/teacheradd">&nbsp;增加</a>
+                    <a class="btn btn-primary" href="/index/Admin/teacheradd">&nbsp;增加</a>
                 </div>
             </div>
             <hr />
