--- a/application/index/view/login/register.html
+++ b/application/index/view/login/register.html
@@ -51,15 +51,25 @@
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-sm-2 control-label">班级:</label>
+                <label class="col-sm-2 control-label">学院:</label>
                 <div class="col-sm-10">
-                    <select name="klass_id" class="form-control">
-                        {volist name="klasses" id="klass" key="key"}
-                        <option value="{$klass->getData('id')}">{$klass->getData('name')}</option>
+                    <select name="collge_id" class="form-control" onchange="selectKlasses(value)" id="college">
+                        <option value="-1">--请选择学院--</option>
+                        {volist name="colleges" id="college" key="key"}
+                        <option value="{$college->id}">{$college->name}</option>
                         {/volist}
                     </select>
                 </div>
             </div>
+
+            <div class="form-group">
+                <label class="col-sm-2 control-label">班级:</label>
+                <div class="col-sm-10">
+                    <select name="klass_id" class="form-control" id="klasses">
+                    </select>
+                </div>
+            </div>
+
             <div class="form-group">
                 <div class="col-sm-offset-2 col-sm-10">
                     <button type="submit" class="btn btn-default">保存</button>
@@ -68,5 +78,42 @@
         </form>
     </div>
 </body>
+<script language="javascript">
+    var klassesString = "{$klasses}";
+    klassesString = klassesString.replace(/&quot;/g, '\"');
+    var klasses = JSON.parse(klassesString);
 
+    var collegeDom = document.getElementById("college");
+    var selectCollge = collegeDom.options[collegeDom.selectedIndex];
+    if (selectCollge.value > 0) {
+        selectKlasses(selectCollge.value);
+    }
+
+    function selectKlasses(collgeId) {
+
+        console.log(klasses);
+        console.log(collgeId);
+
+        var selectKlasses = klasses.filter((klasse) => {
+            return klasse.collegeid == collgeId;
+        });
+
+        var klassesDom = document.getElementById("klasses");
+
+        //将元素列表框中的元素全部清空
+        klassesDom.innerText="";
+  
+        var opt =document.createElement("option");
+        opt.innerText="--请选择班级--";
+        opt.value="-1";
+        klassesDom.appendChild(opt);
+        selectKlasses.forEach((klass) => {
+            opt=document.createElement("option");
+            opt.innerText= klass.name;
+            opt.value = klass.id;
+            klassesDom.appendChild(opt);
+        });
+        
+    }
+ </script>
 </html>
