--- a/application/index/view/teacher/courseadd.html
+++ b/application/index/view/teacher/courseadd.html
@@ -44,11 +44,13 @@
             <div class="form-group">
                 <label for="name" class="col-sm-2 control-label">老师:</label>
                 <div class="col-sm-10">
-                    <select name="teacher_id" class="form-control">
-                        {volist name="teachers" id="teacher" key="key"}
-                        <option value="{$teacher->getData('id')}">{$teacher->getData('name')}</option>
-                        {/volist}
-                    </select>
+                    
+                        <input type="hidden" id="teacher_id" name="teacher_id" value="{$teacher->getData('id')}"></input>
+                        
+                        
+                        <button class="form-control" name="teacher_id" value="{$teacher->getData('id')}" disabled="disabled">{$teacher->getData('name')}</button>
+                        
+                   
                 </div>
             </div>
             <div class="form-group">
