--- a/application/index/view/teacher/gradeinfo.html
+++ b/application/index/view/teacher/gradeinfo.html
@@ -5,26 +5,26 @@
               
               <h3>课程名:{$course->getdata('name')}</h3>
               <h3>课程编码:{$course->getdata('num')}</h3>
-              <a href="gradeadd?id={$course->getData('id')}" class="btn btn-primary">&nbsp;录入成绩</a>
-              <a href="grade" class="btn btn-primary">&nbsp;返回</a>
+              <a href="/index/teacher/gradeadd?id={$course->getData('id')}" class="btn btn-primary">&nbsp;录入成绩</a>
+              <a href="/index/teacher/grade" class="btn btn-primary">&nbsp;返回</a>
               <hr />
               <table class="table table-bordered">
                 <tr class="info">
-                  <th>上课次数</th>
+                  <th>序号</th>
                   <th>上课周次</th>
                   <th>上课星期</th>
                   <th>上课时间</th>
                   <th>上课教室</th>
                   <th>出勤详情</th>
                 </tr>
-                {volist name="infos" id="info" $key="key"}
+                {volist name="infos" id="info" key="key"}
                   <tr>
                     <td>{$key}</td>
                     <td>{$info->getdata('week')}</td>
                     <td>{$info->getdata('weekday')}</td>
                     <td>{$info->getdata('begin')."~".($info->getdata('begin') + $info->getdata('length') -1)}</td>
                     <td>{$info->classroom->classroomname}</td>
-                    <td><a href="gradeoncourse?id={$info->getData('id')}" class="btn btn-primary">&nbsp;详情</a></td>
+                    <td><a href="/index/teacher/gradeoncourse?id={$info->getData('id')}" class="btn btn-primary">&nbsp;详情</a></td>
                   </tr>
                 {/volist}
             </table>
