--- a/application/index/view/student/course.html
+++ b/application/index/view/student/course.html
@@ -11,7 +11,7 @@
                     <td>
                         <div class="dropdown">
                             <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                                {$Termname}
+                                {$isTerm->name}
                                 <span class="caret"></span>
                             </button>
                             <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
