--- a/application/index/view/admin/classroomadd.html
+++ b/application/index/view/admin/classroomadd.html
@@ -22,10 +22,15 @@
             <h1 class="text-center">添加教室<small>微课堂</small></h1>
         </div>
         <form class="form-horizontal" action="classroomsave" method="post">
+            
             <div class="form-group">
-                <label for="name" class="col-sm-2 control-label">教室区域:</label>
+                <label for="area_id" class="col-sm-2 control-label">教师区域:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" name="classroomplace" placeholder="教室区域...">
+                    <select name="area_id" class="form-control">
+                        {volist name="areas" id="area" key="key"}
+                        <option value="{$area->getData('id')}">{$area->getData('name')}</option>
+                        {/volist}
+                    </select>
                 </div>
             </div>
             <div class="form-group">
