--- a/application/index/view/admin/classroomedit.html
+++ b/application/index/view/admin/classroomedit.html
@@ -23,15 +23,19 @@
         </div>
         <form class="form-horizontal" action="classroomupdate" method="post">
             <div class="form-group">
-                <label for="name" class="col-sm-2 control-label">教室区域:</label>
+                <label for="area_id" class="col-sm-2 control-label">教师区域:</label>
                 <div class="col-sm-10">
-                    <input type="hidden" name="id" value="{$classroom->getData('id')}" />
-                    <input type="text" class="form-control" name="classroomplace" placeholder="教室区域..." value="{$classroom->getData('classroomplace')}">
+                    <select name="area_id" class="form-control">
+                        {volist name="areas" id="area" key="key"}
+                        <option {eq name="$classroom->getData('area_id')" value="$area->getData('id')"}selected="selected"{/eq} value="{$area->getData('id')}">{$area->getData('name')}</option>
+                        {/volist}
+                    </select>
                 </div>
             </div>
             <div class="form-group">
                 <label for="name" class="col-sm-2 control-label">教室名称:</label>
                 <div class="col-sm-10">
+                    <input type="hidden" name="id" value="{$classroom->getData('id')}" />
                     <input type="text" class="form-control" name="classroomname" placeholder="教室名称..." value="{$classroom->getData('classroomname')}">
                 </div>
             </div>
