--- a/application/index/view/admin/klassadd.html
+++ b/application/index/view/admin/klassadd.html
@@ -29,9 +29,13 @@
                 </div>
             </div>
             <div class="form-group">
-                <label for="academy" class="col-sm-2 control-label">学院:</label>
+                <label for="name" class="col-sm-2 control-label">学院:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" id="academy" placeholder="学院..." name="academy" />
+                    <select name="college_id" class="form-control">
+                        {volist name="colleges" id="college" key="key"}
+                        <option value="{$college->getData('id')}">{$college->getData('name')}</option>
+                        {/volist}
+                    </select>
                 </div>
             </div>
             <div class="form-group">
