--- a/application/index/view/admin/klassedit.html
+++ b/application/index/view/admin/klassedit.html
@@ -29,10 +29,15 @@
                     <input type="text" class="form-control" id="name" value="{$Klass->getData('name')}" name="name" />
                 </div>
             </div>
+
             <div class="form-group">
                 <label for="academy" class="col-sm-2 control-label">学院:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" id="academy" value="{$Klass->getData('academy')}" name="academy" />
+                    <select name="college_id" class="form-control">
+                        {volist name="colleges" id="college" key="key"}
+                        <option {eq name="$Klass->getData('college_id')" value="$college->getData('id')"}selected="selected"{/eq} value="{$college->getData('id')}">{$college->getData('name')}</option>
+                        {/volist}
+                    </select>
                 </div>
             </div>
             <div class="form-group">
