--- a/application/index/view/login/register.html
+++ b/application/index/view/login/register.html
@@ -47,7 +47,7 @@
             <div class="form-group">
                 <label class="col-sm-2 control-label">密码:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" name="password" />
+                    <input type="password" class="form-control" name="password" />
                 </div>
             </div>
             <div class="form-group">
@@ -95,7 +95,7 @@
         console.log(collgeId);
 
         var selectKlasses = klasses.filter((klasse) => {
-            return klasse.collegeid == collgeId;
+            return klasse.college_id == collgeId;
         });
 
         var klassesDom = document.getElementById("klasses");
