--- a/application/index/view/teacher/courseedit.html
+++ b/application/index/view/teacher/courseedit.html
@@ -60,9 +60,13 @@
                 </div>
             </div>
             
-            {volist name="Klasses" id="klass"}
+            {volist name="colleges" id="college" key="key"}
+            <label>{$college->name}:&nbsp;</label>
+            {volist name="college->Klasses"  id="klass"}
             <input type="checkbox" name="klass_id[]" id="klass_id_{$klass->id}" value="{$klass->id}" {eq name="Course->getIsChecked($klass)" value="true"}checked="checked"{/eq}/>
             <label for="klass_id_{$klass->id}">{$klass->name}&nbsp;&nbsp;&nbsp;&nbsp;</label>
+            {/volist}
+            <br />
             {/volist}
 
             <div class="form-group">
