--- a/application/index/view/student/page.html
+++ b/application/index/view/student/page.html
@@ -31,10 +31,10 @@ td{text-align: center;}
     <div class="row">
         <div class="col-md-12">
             
-            <div class="jumbotron">
+<!--             <div class="jumbotron">
                 <h1>微课堂-梦云智出品</h1>
-                <p><a href="aboutourteam" class="btn btn-primary btn-lg" role="button">团队概况</a></p>
-            </div>
+                <p><a href="/static/index.html" class="btn btn-primary btn-lg" role="button">团队概况</a></p>
+            </div> -->
 
     <div id="main">
         <header id="header">
